--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ partner_url: http://www.ferrarajs.com
 {% include section-contents.html %}
 
 {% if page.cfp %} {% include section-cfp.html %} {% endif %}
+
+{% include section-videos.html %}
+
 {% if page.tickets %} {% include section-tickets.html %} {% endif %}
 {% if page.speakers %} {% include section-speakers.html %} {% endif %}
 {% if page.workshop %} {% include section-workshop.html %} {% endif %}
