--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ ttl: Universal JS Day
 conf_data: Ferrara, 14 Aprile 2018
 base_url: http://2018.universaljsday.com
 workshop: false
-cfp: false
-cfp_url: https://docs.google.com/forms/d/e/1FAIpQLSdhaLbbk4mN4k_Y4fR3DTbx0f-b9YKheWqnKy4RFe05ioeUlA/viewform
-cfp_end: 26 febbraio 2018
+cfp: true
+cfp_url: https://docs.google.com/forms/d/e/1FAIpQLSeYvQOwVwAn9_nJleql2Vxfy1xjmcpymcs6jfWk_TVPoiypIA/viewform
+cfp_end: 11 marzo 2018
 speakers: false
 cfs: true
 where: cna-ferrara
