feature: add tickets

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ cfp_end: 11 marzo 2018
 speakers: false
 cfs: true
 where: cna-ferrara
-tickets: false
-tickets_url: https://eventbrite.com/tickets-external?eid=30693052747&ref=etckt
+tickets: true
+tickets_url: https://eventbrite.com/tickets-external?eid=39908587660&ref=etckt
 location_name: CNA Ferrara
 location_address: Via Caldirolo, 85
 location_city: Ferrara, Italia
