--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ partner_url: http://www.ferrarajs.com
 {% include section-videos.html %}
 
 {% if page.tickets %} {% include section-tickets.html %} {% endif %}
-{% if page.speakers %} {% include section-speakers.html %} {% endif %}
+{% if page.speakers %} {% include section-speakers.html %} {% else %} {% include section-announcements.html %} {% endif %}
 {% if page.workshop %} {% include section-workshop.html %} {% endif %}
 
 {% include section-location.html %}
