--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Universal JS Day
 ttl: Universal JS Day
 conf_data: Ferrara, 20 Aprile 2018
 base_url: http://2018.universaljsday.com
-workshop: false
+workshop: true
 cfp: true
 cfp_url: https://docs.google.com/forms/d/e/1FAIpQLSeYvQOwVwAn9_nJleql2Vxfy1xjmcpymcs6jfWk_TVPoiypIA/viewform
 cfp_end: 11 marzo 2018
@@ -25,11 +25,13 @@ partner_url: http://www.ferrarajs.com
 {% include section-contents.html %}
 
 {% if page.cfp %} {% include section-cfp.html %} {% endif %}
-{% include section-videos.html %}
 
 {% if page.tickets %} {% include section-tickets.html %} {% endif %}
 {% if page.speakers %} {% include section-speakers.html %} {% else %} {% include section-announcements.html %} {% endif %}
 {% if page.workshop %} {% include section-workshop.html %} {% endif %}
 
 {% include section-location.html %}
+
+{% include section-videos.html %}
+
 {% include section-sponsors.html %}
